added script tag to correct position

--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
-hello js rocket
+<!DOCTYPE html>
+<html>
+	<script type="text/javascript" src="js/script.js">
+		
+	</script>
+<head>
+	<title>hello js rocket</title>
+</head>
+<body>
 
-<script type="text/javascript">
-	console.log('hello there friends!');
-</script>
+</body>
+</html>
+
+
